# alloys-code

./: .gitignore  .ignore
queries/: query-mpid.py  (+2 more)
src/modules/: prompt-hull.md  prompt-md.md  pyproject.toml
src/modules/main/: ds0-metrics.py  ds1-leaderboard.py
src/modules/main/catxy-eform/: 00-eform-stress-2json.py  01-efrom-filter.py  02-efrom-gnn-calc.py  03-drop-results.py  03-set-refernce.py  10-filter-stable.py  20-plot-eform-destr.py  21-plot-eform-scatter.py  22-plot-eform-heatmap.py
src/modules/main/hull-eform/: 00-eform-to-json.py  10-gnn-relax.py  11-gnn-relax-cli.py  11-gnn-run-all-calcs.sh  20-eos-df-analysis.py  README-status.md  test-calc-api.py  test-gnn-flow.py  test-parse.py
src/modules/main/md/: read-outcar-series.py
src/modules/main/md-base/: 01-debug-vasuprun-basic-read.py  01-stich-xml2traj.py  02-debug-velocities-read.py  03-debug-positions-allframes.py  04-debug-reconstruct-velocities.py  10-build-trajectories.py  20-compute-rdf.py  21-compute-vacf.py  README.md  readme-dev.md
src/modules/main/md-independent/: 00-debug-count-steps-outcar.py  01-parse.py
src/modules/main/md-stability/: 00-debug-outcar-show-data-lines.py  00-debug-read-outcar-series.py
src/modules/main/rand-eform/: 00-eform-stress-2json.py  02-efrom-gnn-calc.py  20-plot-eform-destr.py  21-plot-eform-scatter.py  22-plot-eform-heatmap.py
src/modules/main/xds-metrics/: 02-efrom-gnn-calc.py
src/modules/main/xslides/: x-slides-speak.md  x-slides.md
src/modules/md-txt/: ToDo.md  dev-hull-latest.md  doc-on-vasp-vsf.md  exp-workers.md
src/modules/vsf/: README.md
(+206 files in other folders)
